--- a/style.css
+++ b/style.css
@@ -387,6 +387,7 @@ div .partner-list .slick-next {
     flex-direction: row;
     justify-content: center;
     align-items: flex-end;
+    width: 100%;
 }
 
 #section-slider .slick-dots {
